--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "nuxt": "^4.2.2",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@nuxtjs/seo": "^3.3.0"
   }
 }
